--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -37,6 +37,14 @@ ru:
   log_out_failed_provider_alert: "Вход из аккаунта %{provider.titleize} не выполнен ."
   please_log_in: 'Пожалуйста авторизуйтесь.'
   admin_label: 'Админ Панель'
+  save: 'Сохранить'
+  remove_image: 'Удалить изображение'
+  load_from_flickr: 'Загрузить из Flickr'
+  find: 'Найти'
+  decks: 'Колоды'
+  select_deck: 'Выберите колоду'
+  image: 'Изобрежение'
+  try_again: 'Попробуйте еще'
 
   activerecord:
     errors:
